added several styles

--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
           <div class="discount-item">
             <div class="discount-item__name">
               <h5 class="discount-item__name">
-                <img src="../img/decorate/canon.png" alt="#" class="discount-item__name-logo">
+                <img src="../img/decorate/canon_logo.png" alt="#" class="discount-item__name-logo">
                 <span class="discount-item__model">EOS 1300D Kit</span>
               </h5>
               <span class="discount-item__value">-10%</span>
             </div>
-            <img src="../img/content/canon_photo.png" alt="#" class="discount-item__image">
+            <img src="../img/content/canon1.jpg" alt="#" class="discount-item__image">
             <div class="discount-item__timer">
               <p class="discount-item__timer-info">
                 До конца акции осталось:
