added styles for mobile version 2

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 Большие скидки на бензопилы
               </h4>
               <p class="goods-slider__item-description">
-                Техническое обслуживание автомобилей у настоящих профессионалов
+                Бензопилы от ведущих производителей Германии.
               </p>
               <a href="#" class="goods-slider__item-link-more">Узнать больше</a>
             </div>
@@ -293,7 +293,11 @@
   </main>
   <footer class="footer">
     <div class="container container--footer">
-      <a href="#" class="logo"></a>
+      <div class="logo">
+        <a href="#" class="logo__link">
+          <img src="../img/decorate/logo.png" alt="Sotbit" class="logo__link-image">
+        </a>
+      </div>
       <p class="footer__copyright">
         2018&nbsp;&copy;&nbsp;TechMarket– технологичный интернет-магазин
       </p>
