added first styles for desctop version

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/6.0.0/normalize.min.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
   <title>TechMarket</title>
 </head>
@@ -29,7 +30,7 @@
         </div>
         <div class="goods-slider">
           <div class="goods-slider__items-wrapper">
-            <div class="goods-slider__item goods-slider__item--forest">
+            <div class="goods-slider__item goods-slider__item--active goods-slider__item--forest">
               <h4 class="goods-slider__item-name">
                 Большие скидки на бензопилы
               </h4>
@@ -37,6 +38,7 @@
                 Бензопилы от ведущих производителей Германии.
               </p>
               <a href="#" class="goods-slider__item-link-more">Узнать больше</a>
+              <img src="..img/content/chainsawOnWood.png" alt="пила" class="goods-slider__item-image">
             </div>
             <div class="goods-slider__item goods-slider__item--forest">
               <h4 class="goods-slider__item-name">Средние скидки на бензопилы</h4>
@@ -44,6 +46,7 @@
                 Техническое обслуживание автомобилей у настоящих профессионалов
               </p>
               <a href="#" class="goods-slider__item-link-more">Узнать больше</a>
+              <img src="..img/content/chainsawOnWood.png" alt="пила" class="goods-slider__item-image">
             </div>
             <div class="goods-slider__item goods-slider__item--forest">
               <h4 class="goods-slider__item-name">
@@ -53,6 +56,7 @@
                 Техническое обслуживание автомобилей у настоящих профессионалов
               </p>
               <a href="#" class="goods-slider__item-link-more">Узнать больше</a>
+              <img src="..img/content/chainsawOnWood.png" alt="пила" class="goods-slider__item-image">
             </div>
           </div>
           <div class="goods-slider__controls">
@@ -113,7 +117,13 @@
               <h5 class="bestseller__title">
                 Измельчитель Bosch MMR 08A1
               </h5>
-              <div class="bestseller__rate"></div>
+              <div class="bestseller__rate">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+              </div>
               <div class="bestseller__info">
                 <span class="bestseller__count">Много</span>
                 <p class="bestseller__code">
@@ -145,7 +155,13 @@
               <h5 class="bestseller__title">
                 Электромонтажный набор Tesla Set 3 (348438)
               </h5>
-              <div class="bestseller__rate"></div>
+              <div class="bestseller__rate">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+              </div>
               <div class="bestseller__info">
                 <span class="bestseller__count">Много</span>
                 <p class="bestseller__code">
@@ -177,7 +193,13 @@
               <h5 class="bestseller__title">
                 Наручные часы SKMEI 9096
               </h5>
-              <div class="bestseller__rate"></div>
+              <div class="bestseller__rate">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+              </div>
               <div class="bestseller__info">
                 <span class="bestseller__count">Много</span>
                 <p class="bestseller__code">
@@ -209,7 +231,13 @@
               <h5 class="bestseller__title">
                 Чайник Marta MT-1092
               </h5>
-              <div class="bestseller__rate"></div>
+              <div class="bestseller__rate">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+              </div>
               <div class="bestseller__info">
                 <span class="bestseller__count">Много</span>
                 <p class="bestseller__code">
@@ -248,7 +276,13 @@
               <h5 class="bestseller__title">
                 Смартфон Xiaomi Mi8 SE 6/64GB
               </h5>
-              <div class="bestseller__rate"></div>
+              <div class="bestseller__rate">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+              </div>
               <div class="bestseller__info">
                 <span class="bestseller__count">Много</span>
                 <p class="bestseller__code">
