--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 Бензопилы от ведущих производителей Германии.
               </p>
               <a href="#" class="goods-slider__item-link-more">Узнать больше</a>
-              <img src="..img/content/chainsawOnWood.png" alt="пила" class="goods-slider__item-image">
+              <img src="../img/content/chainsawOnWood.png" alt="пила" class="goods-slider__item-image">
             </div>
             <div class="goods-slider__item goods-slider__item--forest">
               <h4 class="goods-slider__item-name">Средние скидки на бензопилы</h4>
@@ -46,7 +46,7 @@
                 Техническое обслуживание автомобилей у настоящих профессионалов
               </p>
               <a href="#" class="goods-slider__item-link-more">Узнать больше</a>
-              <img src="..img/content/chainsawOnWood.png" alt="пила" class="goods-slider__item-image">
+              <img src="../img/content/chainsawOnWood.png" alt="пила" class="goods-slider__item-image">
             </div>
             <div class="goods-slider__item goods-slider__item--forest">
               <h4 class="goods-slider__item-name">
@@ -56,7 +56,7 @@
                 Техническое обслуживание автомобилей у настоящих профессионалов
               </p>
               <a href="#" class="goods-slider__item-link-more">Узнать больше</a>
-              <img src="..img/content/chainsawOnWood.png" alt="пила" class="goods-slider__item-image">
+              <img src="../img/content/chainsawOnWood.png" alt="пила" class="goods-slider__item-image">
             </div>
           </div>
           <div class="goods-slider__controls">
@@ -71,7 +71,7 @@
         </div>
         <div class="discounts">
           <div class="discount-item">
-            <div class="discount-item__name">
+            <div class="discount-item__info">
               <h5 class="discount-item__name">
                 <img src="../img/decorate/canon_logo.png" alt="#" class="discount-item__name-logo">
                 <span class="discount-item__model">EOS 1300D Kit</span>
@@ -79,30 +79,17 @@
               <span class="discount-item__value">-10%</span>
             </div>
             <img src="../img/content/canon1.jpg" alt="#" class="discount-item__image">
+            <p class="discount-item__timer-info">
+              До конца акции осталось:
+            </p>
             <div class="discount-item__timer">
-              <p class="discount-item__timer-info">
-                До конца акции осталось:
-              </p>
               <div class="discount-item__timer-item">
-                <div class="discount-item__timer-part">
-                  <span class="discount-item__timer-val">1</span>
-                  <span class="discount-item__timer-val">2</span>
+                <div class="discount-item__timer-table"></div>
+                <div class="discount-item__timer-units">
+                  <p class="discount-item__timer-unit">Часы</p>
+                  <p class="discount-item__timer-unit">Минуты</p>
+                  <p class="discount-item__timer-unit">Секунды</p>
                 </div>
-                <span class="discount-item__timer-units">Часы</span>
-              </div>
-              <div class="discount-item__timer-item">
-                <div class="discount-item__timer-part">
-                  <span class="discount-item__timer-val">1</span>
-                  <span class="discount-item__timer-val">1</span>
-                </div>
-                <span class="discount-item__timer-units">Минуты</span>
-              </div>
-              <div class="discount-item__timer-item">
-                <div class="discount-item__timer-part">
-                  <span class="discount-item__timer-val">5</span>
-                  <span class="discount-item__timer-val">2</span>
-                </div>
-                <span class="discount-item__timer-units">Секунды</span>
               </div>
             </div>
           </div>
@@ -113,7 +100,9 @@
         <div class="bestsellers-slider">
           <div class="bestsellers-slider__wrapper">
             <article class="bestseller">
-              <img src="../img/content/BoschMMR08A1.jpg" alt="Измельчитель BoschMMR08A1" class="bestseller__image">
+              <div class="bestseller__image">
+                <img src="../img/content/BoschMMR08A1.jpg" alt="Измельчитель BoschMMR08A1">
+              </div>
               <h5 class="bestseller__title">
                 Измельчитель Bosch MMR 08A1
               </h5>
@@ -147,11 +136,13 @@
                   <span class="bestseller__order-value">14</span>
                   <span class="bestseller__order-plus">+</span>
                 </div>
-                <a href="#" class="bestseller__card-link">Корзина</a>
+                <a href="#" class="bestseller__card-link">В корзину</a>
               </div>
             </article>
             <article class="bestseller">
-              <img src="../img/content/Tesla_Set_3_(348438).jpg" alt="Tesla Set" class="bestseller__image">
+              <div class="bestseller__image">
+                <img src="../img/content/Tesla_Set_3_(348438).jpg" alt="Tesla Set">
+              </div>
               <h5 class="bestseller__title">
                 Электромонтажный набор Tesla Set 3 (348438)
               </h5>
@@ -185,11 +176,13 @@
                   <span class="bestseller__order-value">14</span>
                   <span class="bestseller__order-plus">+</span>
                 </div>
-                <a href="#" class="bestseller__card-link">Корзина</a>
+                <a href="#" class="bestseller__card-link">В корзину</a>
               </div>
             </article>
             <article class="bestseller">
-              <img src="../img/content/SKMEI_9096.jpg" alt="Наручные часы SKMEI 9096" class="bestseller__image">
+              <div class="bestseller__image">
+                <img src="../img/content/SKMEI_9096.jpg" alt="Наручные часы SKMEI 9096">
+              </div>
               <h5 class="bestseller__title">
                 Наручные часы SKMEI 9096
               </h5>
@@ -223,13 +216,15 @@
                   <span class="bestseller__order-value">14</span>
                   <span class="bestseller__order-plus">+</span>
                 </div>
-                <a href="#" class="bestseller__card-link">Корзина</a>
+                <a href="#" class="bestseller__card-link">В корзину</a>
               </div>
             </article>
             <article class="bestseller">
-              <img src="../img/content/MartaMT-1092.jpg" alt="Чайник Marta MT-1092" class="bestseller__image">
+              <div class="bestseller__image">
+                <img src="../img/content/MartaMT-1092.jpg" alt="Чайник Marta MT-1092">
+              </div>
               <h5 class="bestseller__title">
-                Чайник Marta MT-1092
+                Чайник Marta </br> MT-1092
               </h5>
               <div class="bestseller__rate">
                 <i class="fas fa-star"></i>
@@ -261,18 +256,13 @@
                   <span class="bestseller__order-value">14</span>
                   <span class="bestseller__order-plus">+</span>
                 </div>
-                <a href="#" class="bestseller__card-link">Корзина</a>
-              </div>
-                <div class="bestseller__order-add">
-                  <span class="bestseller__order-min"></span>
-                  <span class="bestseller__order-value"></span>
-                  <span class="bestseller__order-plus"></span>
-                </div>
-                <a href="" class="bestseller__card-link"></a>
+                <a href="#" class="bestseller__card-link">В корзину</a>
               </div>
             </article>
             <article class="bestseller">
-              <img src="../img/content/XiaomiMi8.jpg" alt="Смартфон Xiaomi Mi8 SE 6/64GB" class="bestseller__image">
+              <div class="bestseller__image">
+                <img src="../img/content/XiaomiMi8.jpg" alt="Смартфон Xiaomi Mi8 SE 6/64GB">
+              </div>
               <h5 class="bestseller__title">
                 Смартфон Xiaomi Mi8 SE 6/64GB
               </h5>
@@ -306,14 +296,47 @@
                   <span class="bestseller__order-value">14</span>
                   <span class="bestseller__order-plus">+</span>
                 </div>
-                <a href="#" class="bestseller__card-link">Корзина</a>
+                <a href="#" class="bestseller__card-link">В корзину</a>
               </div>
+            </article>
+            <article class="bestseller">
+              <div class="bestseller__image">
+                <img src="../img/content/BoschMMR08A1.jpg" alt="Измельчитель BoschMMR08A1">
+              </div>
+              <h5 class="bestseller__title">
+                Измельчитель Bosch MMR 08A1
+              </h5>
+              <div class="bestseller__rate">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+              </div>
+              <div class="bestseller__info">
+                <span class="bestseller__count">Много</span>
+                <p class="bestseller__code">
+                  <span class="bestseller__code-name">Артикул:</span>
+                  <span class="bestseller__code-value">34242342</span>
+                </p>
+              </div>
+              <div class="bestseller__discount">
+                <p class="bestseller__prices">
+                  <span class="bestseller__prev-price">18000 &#x20bd;</span>
+                  <span class="bestseller__current-price">15000 &#x20bd;</span>
+                </p>
+                <p class="bestseller__saving">
+                  <span class="bestseller__saving-name">Экономия:</span>
+                  <span class="bestseller__saving-value">5000 &#x20bd;</span>
+                </p>
+              </div>
+              <div class="bestseller__order">
                 <div class="bestseller__order-add">
-                  <span class="bestseller__order-min"></span>
-                  <span class="bestseller__order-value"></span>
-                  <span class="bestseller__order-plus"></span>
+                  <span class="bestseller__order-min">-</span>
+                  <span class="bestseller__order-value">14</span>
+                  <span class="bestseller__order-plus">+</span>
                 </div>
-                <a href="" class="bestseller__card-link"></a>
+                <a href="#" class="bestseller__card-link">В корзину</a>
               </div>
             </article>
           </div>
