corrected js for bestseller slider

--- a/index.html
+++ b/index.html
@@ -361,6 +361,6 @@
     </div>
   </footer>
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-  <script src="js/bestseller__slider.js"></script>
+  <script src="js/bestseller-slider.js"></script>
 </body>
 </html>
