corrected slider anв styles

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
         <div class="goods-slider">
           <div class="goods-slider__items-wrapper">
-            <div class="goods-slider__item goods-slider__item--active goods-slider__item--forest">
+            <div class="goods-slider__item goods-slider__item--forest">
               <h4 class="goods-slider__item-name">
                 Большие скидки на бензопилы
               </h4>
