--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
               </div>
               <div class="bestseller__discount">
                 <p class="bestseller__prices">
-                  <span class="bestseller__prev-price">18000 &#x20bd;</span>
+                  <span class="bestseller__prev-price"></span>
                   <span class="bestseller__current-price">15000 &#x20bd;</span>
                 </p>
                 <p class="bestseller__saving">
@@ -242,7 +242,7 @@
               </div>
               <div class="bestseller__discount">
                 <p class="bestseller__prices">
-                  <span class="bestseller__prev-price">18000 &#x20bd;</span>
+                  <span class="bestseller__prev-price"></span>
                   <span class="bestseller__current-price">15000 &#x20bd;</span>
                 </p>
                 <p class="bestseller__saving">
@@ -282,7 +282,7 @@
               </div>
               <div class="bestseller__discount">
                 <p class="bestseller__prices">
-                  <span class="bestseller__prev-price">18000 &#x20bd;</span>
+                  <span class="bestseller__prev-price"></span>
                   <span class="bestseller__current-price">15000 &#x20bd;</span>
                 </p>
                 <p class="bestseller__saving">
