--- a/index.html
+++ b/index.html
@@ -100,6 +100,11 @@
         <div class="bestsellers-slider">
           <div class="bestsellers-slider__wrapper">
             <article class="bestseller">
+              <div class="remark">
+                <div class="remark__hit">Хит!</div>
+                <div class="remark__stock">Акция</div>
+                <div class="remark__discount">25%</div>
+              </div>
               <div class="bestseller__image">
                 <img src="../img/content/BoschMMR08A1.jpg" alt="Измельчитель BoschMMR08A1">
               </div>
